Ramesh: List by SKU, Vendor UUID endpoints, swagger client sdk, docs update
